# qFES

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QFES.cpp  README.md  RegistrationEntry.cpp  RegistrationEntry.h  RegistrationList.cpp  RegistrationList.h  TODO
